# routingpolicy

./: .flake8  .gitattributes  .gitignore  README.md  mypy.ini  pyproject.toml
policies/: communities-14525  prefix-list4-14525  prefix-list4-14525.ios  prefix-list6-14525  prefix-list6-14525.ios  route-map-14525.ios
policies/rs1.phx1.48ix.net/: _all.ios
policies/rs2.phx1.48ix.net/: _all.ios
routingpolicy/: __init__.py  combine.py  contentful.py  dotenv.py  generate.py  generate_secret.py  irr.py  log.py  main.py  peeringdb.py  rendering.py  run.py  slack.py
routingpolicy/agent/: __init__.py  main.py  send.py
routingpolicy/api/: __init__.py  main.py
routingpolicy/arista/: __init__.py  acl.py  actions.py  compare.py  send.py
routingpolicy/config/: __init__.py  main.py
routingpolicy/global_policy/: aspaths.ios  bgp.ios  communities.ios  prefix-list-ipv4.ios  prefix-list-ipv6.ios  prefixes.ios  route-maps.ios
routingpolicy/models/: __init__.py  agent.py  api.py  asn.py  params.py  participant.py  route_server.py  switch.py
routingpolicy/templates/: combined.j2  participant-bgp.j2  participant-communities.j2  participant-prefix-list4.j2  participant-prefix-list6.j2  participant-route-map.j2  tier1-prefix-list4.j2  tier1-prefix-list6.j2
tests/: __init__.py  test_all.py  test_bgp.py  test_combined.py  test_communities.py  test_contentful.py  test_dotenv.py  test_generate_all.py  test_irr.py  test_main_policy.py  test_peeringdb.py  test_prefixes.py  test_route_maps.py  test_rpc_acl.py  test_switch_arista.py  test_switch_arista_compare.py
(+29 files in other folders)
