[tool.poetry]
name = "routingpolicy"
version = "0.0.1"
description = "48 IX Routing Policy Generation"
authors = ["checktheroads <matt@48ix.net>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
jinja2 = "^2.11.2"
pydantic = "^1.6.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.2"
mypy = "^0.782"
flake8-black = "^0.2.1"
pep8-naming = "^0.11.1"
flake8-docstrings = "^1.5.0"
mccabe = "^0.6.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
